K3d/codeburstTraefik/app0/app0-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app0-deployment
spec:
  selector:
    matchLabels:
      app: app0
  replicas: 3
  template:
    metadata:
      labels:
        app: app0
    spec:
      containers:
      - name: app0
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: app0-html
