K3d/codeburstTraefik/app0/app0-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app0-service
  labels:
    run: app0
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: app0
