K3d/codeburstTraefik/app0/app0-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app0-ingress
  labels:
    name: app0-myingress
  annotations:
    ingress.kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app0-service
            port: 
              number: 80
